--- a/Puzzle/Classes/ViewController/MenuViewController.xib
+++ b/Puzzle/Classes/ViewController/MenuViewController.xib
@@ -105,73 +105,37 @@
 					<object class="IBUILabel" id="915152604">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{136, 520}, {219, 29}}</string>
+						<string key="NSFrame">{{136, 551}, {219, 29}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSNextKeyView" ref="890679485"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-						<string key="IBUIText">There will be 3 rows</string>
+						<string key="IBUIText">There will be 16 Pieces</string>
 						<reference key="IBUITextColor" ref="720891650"/>
 						<reference key="IBUIHighlightedColor" ref="7900510"/>
 						<int key="IBUIBaselineAdjustment">1</int>
 						<float key="IBUIMinimumFontSize">10</float>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="924341357">
+						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<string key="name">Helvetica</string>
 							<string key="family">Helvetica</string>
 							<int key="traits">0</int>
 							<double key="pointSize">18</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="233364669">
+						<object class="NSFont" key="IBUIFont">
 							<string key="NSName">Helvetica</string>
 							<double key="NSSize">18</double>
 							<int key="NSfFlags">16</int>
 						</object>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
-					<object class="IBUILabel" id="551676055">
-						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{136, 587}, {219, 29}}</string>
-						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
-						<bool key="IBUIOpaque">NO</bool>
-						<bool key="IBUIClipsSubviews">YES</bool>
-						<int key="IBUIContentMode">7</int>
-						<bool key="IBUIUserInteractionEnabled">NO</bool>
-						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-						<string key="IBUIText">There will be 3 columns</string>
-						<reference key="IBUITextColor" ref="720891650"/>
-						<reference key="IBUIHighlightedColor" ref="7900510"/>
-						<int key="IBUIBaselineAdjustment">1</int>
-						<float key="IBUIMinimumFontSize">10</float>
-						<reference key="IBUIFontDescription" ref="924341357"/>
-						<reference key="IBUIFont" ref="233364669"/>
-						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
-					</object>
 					<object class="IBUISlider" id="43367711">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{134, 552}, {223, 23}}</string>
-						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="551676055"/>
-						<bool key="IBUIOpaque">NO</bool>
-						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-						<int key="IBUIContentHorizontalAlignment">0</int>
-						<int key="IBUIContentVerticalAlignment">0</int>
-						<float key="IBUIValue">3</float>
-						<float key="IBUIMinValue">1</float>
-						<float key="IBUIMaxValue">5</float>
-					</object>
-					<object class="IBUISlider" id="285888784">
-						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{134, 624}, {223, 23}}</string>
+						<string key="NSFrame">{{134, 612}, {223, 23}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1029311628"/>
@@ -179,9 +143,9 @@
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
-						<float key="IBUIValue">3</float>
-						<float key="IBUIMinValue">1</float>
-						<float key="IBUIMaxValue">5</float>
+						<float key="IBUIValue">4</float>
+						<float key="IBUIMinValue">4</float>
+						<float key="IBUIMaxValue">9</float>
 					</object>
 					<object class="IBUIButton" id="890679485">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -189,7 +153,7 @@
 						<string key="NSFrame">{{634, 520}, {253, 46}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="285888784"/>
+						<reference key="NSNextKeyView" ref="43367711"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -290,22 +254,6 @@
 					<int key="connectionID">23</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">puzzleLabelColumns</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="551676055"/>
-					</object>
-					<int key="connectionID">24</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">puzzleSliderColumns</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="285888784"/>
-					</object>
-					<int key="connectionID">25</int>
-				</object>
-				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">puzzleChangesDidEndForRow:</string>
 						<reference key="source" ref="43367711"/>
@@ -331,33 +279,6 @@
 						<int key="IBEventType">13</int>
 					</object>
 					<int key="connectionID">21</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">puzzleChangesDidEndForColumn:</string>
-						<reference key="source" ref="285888784"/>
-						<reference key="destination" ref="372490531"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">26</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">puzzleChangesDidEndForColumn:</string>
-						<reference key="source" ref="285888784"/>
-						<reference key="destination" ref="372490531"/>
-						<int key="IBEventType">8</int>
-					</object>
-					<int key="connectionID">27</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">puzzleChangedForColumns:</string>
-						<reference key="source" ref="285888784"/>
-						<reference key="destination" ref="372490531"/>
-						<int key="IBEventType">13</int>
-					</object>
-					<int key="connectionID">28</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -397,12 +318,10 @@
 							<reference ref="653273691"/>
 							<reference ref="362962931"/>
 							<reference ref="456607521"/>
-							<reference ref="915152604"/>
-							<reference ref="551676055"/>
 							<reference ref="890679485"/>
-							<reference ref="285888784"/>
 							<reference ref="1029311628"/>
 							<reference ref="43367711"/>
+							<reference ref="915152604"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -440,22 +359,10 @@
 						<string key="objectName">For Row</string>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">11</int>
-						<reference key="object" ref="551676055"/>
-						<reference key="parent" ref="191373211"/>
-						<string key="objectName">For Column</string>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">12</int>
 						<reference key="object" ref="43367711"/>
 						<reference key="parent" ref="191373211"/>
 						<string key="objectName">Row Slider</string>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">13</int>
-						<reference key="object" ref="285888784"/>
-						<reference key="parent" ref="191373211"/>
-						<string key="objectName">Column Slider</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">14</int>
@@ -478,9 +385,7 @@
 					<string>-2.CustomClassName</string>
 					<string>-2.IBPluginDependency</string>
 					<string>1.IBPluginDependency</string>
-					<string>11.IBPluginDependency</string>
 					<string>12.IBPluginDependency</string>
-					<string>13.IBPluginDependency</string>
 					<string>14.IBPluginDependency</string>
 					<string>15.IBPluginDependency</string>
 					<string>4.IBPluginDependency</string>
@@ -494,8 +399,6 @@
 					<string>MenuViewController</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>UIResponder</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
